added Organization controller tests
